--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   - type: web
-    name: flask-voting-system
-    env: docker
-    buildCommand: docker build -t flask-voting-app .
-    startCommand: docker run -p $PORT:5000 flask-voting-app
+    name: voting-remastered
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
     envVars:
-      - key: PORT
-        value: 5000
+      - key: PYTHON_VERSION
+        value: 3.8.12
+    plan: free
