--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 Flask==1.1.2
 Flask-WTF==0.14.3
 gunicorn==20.0.4
-opentok==2.10.0
 face-recognition==1.3.0
+face-recognition-models==0.3.0
+numpy>=1.19.3
+dlib==19.24.0
+Pillow>=8.0.1
+Werkzeug==1.0.1
+click>=7.1.2
+itsdangerous==1.1.0
+Jinja2>=2.11.2
+MarkupSafe==1.1.1
+WTForms>=2.3.3
